[gd_scene load_steps=4 format=2]

[ext_resource path="res://map/regionmap/RegionMap.gd" type="Script" id=1]
[ext_resource path="res://terrain/region_tiles.tres" type="TileSet" id=2]
[ext_resource path="res://map/regionmap/RegionMapLayer.gd" type="Script" id=3]

[node name="RegionMap" type="Node"]
script = ExtResource( 1 )

[node name="SurfaceLayer" type="TileMap" parent="."]
z_as_relative = false
tile_set = ExtResource( 2 )
format = 1
script = ExtResource( 3 )

[node name="VegetationLayer" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
format = 1
script = ExtResource( 3 )
